Explicitly set the text-align for table headers to fix a strange error I was getting locally where the inheritance from #content-body was being overridden by webkit-auto.

--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -487,6 +487,7 @@ table.my-table th {
    padding: 10px 0px 0px 0px;
    font-size: 14px;
    font-weight: bold;
+   text-align: left;
 }
 
 
